# wgpu_website

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  Context.cpp  Context.h  GpuProcess.cpp  GpuProcess.h  LICENSE  Mesh.cpp  Mesh.hpp  PipelineRenderMesh.cpp  PipelineRenderMesh.h  PipelineRenderSdf.cpp  PipelineRenderSdf.h  PipelineRenderTriangle.cpp  PipelineRenderTriangle.h  README.md  implementations.cpp  main.cpp  shell.html  shell_minimal.html
dependencies/: CMakeLists.txt  glfw.cmake  glm.cmake
resources/: cameraMesh.mtl  cameraToon.mtl  cube.mtl  renderMeshShader.wgsl  renderSphereSdfShader.wgsl  renderTriangleShader.wgsl  shader.wgsl
webgpu/: webgpu.cmake
